# My_notes1

./: .~lock.Zbar配置问题.odt#  README.md  Zbar配置问题.odt
Basler相机配置/: 相机配置.txt
Basler相机配置/TestBasler/: CMakeLists.txt  camera_pylon_8mm_21630206.yml  main.cpp
Basler相机配置/TestBasler/Camera_pylon/: CMakeLists.txt  camera_pylon.cpp  camera_pylon.h
Basler相机配置/pylon-5.0.11.10914-x86_64/: INSTALL  README  ReleaseNotes.txt
Basler相机配置/pylon-5.0.11.10914-x86_64/Samples/C++/: Makefile
Basler相机配置/pylon-5.0.11.10914-x86_64/Samples/C++/Grab_MultiCast/: Grab_MultiCast.cpp
Basler相机配置/pylon-5.0.11.10914-x86_64/Samples/C++/Grab_MultipleCameras/: Grab_MultipleCameras.cpp
Basler相机配置/pylon-5.0.11.10914-x86_64/Samples/C++/Grab_UsingExposureEndEvent/: Grab_UsingExposureEndEvent.cpp  Grab_UsingExposureEndEvent_Usb.cpp
Basler相机配置/pylon-5.0.11.10914-x86_64/Samples/C++/Grab_UsingSequencer/: Grab_UsingSequencer.cpp  Grab_UsingSequencer_Usb.cpp
Basler相机配置/pylon-5.0.11.10914-x86_64/Samples/C++/LegacySamples/LegacyAcquireSingleFrame/: LegacyAcquireSingleFrame.cpp
Basler相机配置/pylon-5.0.11.10914-x86_64/Samples/C++/LegacySamples/LegacyAcquireSingleFrame_ChunkImage/: LegacyAcquireSingleFrame_ChunkImage.cpp
Basler相机配置/pylon-5.0.11.10914-x86_64/Samples/C++/LegacySamples/LegacyCameraEvents/: LegacyCameraEvents.cpp
Basler相机配置/pylon-5.0.11.10914-x86_64/Samples/C++/ParametrizeCamera_AutoFunctions/: ParametrizeCamera_AutoFunctions_Usb.cpp
Basler相机配置/pylon-5.0.11.10914-x86_64/Samples/C++/ParametrizeCamera_NativeParameterAccess/: ParametrizeCamera_NativeParameterAccess.cpp
Basler相机配置/pylon-5.0.11.10914-x86_64/Samples/C++/Utility_Image/: Utility_Image.cpp
Basler相机配置/pylon-5.0.11.10914-x86_64/Samples/C++/Utility_ImageFormatConverter/: Utility_ImageFormatConverter.cpp
Basler相机配置/pylon-5.0.11.10914-x86_64/Samples/C/GrabTwoCameras/: GrabTwoCameras.c
OpenCV/1/: CMakeLists.txt  main.cpp
OpenCV/1/11/: 11.cbp
slambook-master/project/0.4/: CMakeLists.txt
tensorflow/: 2.py  3.py  Untitled 1.odt
二维码识别程序测试/src/: c.cpp
多线程练习/: CMakeLists.txt  main.cpp
平面pcl/: CMakeLists.txt
平面pcl/include/: Get3Points.h  GetVectorN.h
平面pcl/src/: CMakeLists.txt  Get3Points.cpp  GetVectorN.cpp
平面pcl/test/: CMakeLists.txt  run_test.cpp
条形码识别/: CMakeLists.txt
条形码识别 (二维码开发) /: CMakeLists.txt
条形码识别 (二维码开发) /capset/: myVideoCap.h
条形码识别 (二维码开发) /include/: common_include.h  my_bar_code.h
条形码识别 (二维码开发) /src/: find_and_pick.cpp  image_handle.cpp  my_bar_code.cpp
条形码识别 (二维码开发) /test/: CMakeLists.txt  QR_basler_video_test.cpp  basler_video_test.cpp  formal.cpp  run_test.cpp
条形码识别 (尝试改进版本）/include/: find_and_pick.h
条形码识别 (尝试改进版本）/src/: find_and_pick.cpp
条形码识别 (尝试改进版本）/test/: basler_video_test.cpp  camera_set.cpp  formal.cpp  run_test.cpp  video_test.cpp
条形码识别 (旋转图测试版本1)/capset/: CMakeLists.txt  capset.cpp
条形码识别 (旋转图测试版本1)/include/: image_handle.h
条形码识别 (旋转图测试版本1)/src/: find_and_pick.cpp  myVideoCap.cpp
条形码识别 (旋转图测试版本1)/test/: basler_and_formal.cpp  basler_video_test.cpp
条形码识别 (旋转图测试版本） /src/: CMakeLists.txt  find_and_pick.cpp  serialapp.cpp
条形码识别 (旋转图测试版本） /test/: formal.cpp  run_test.cpp
条形码识别 (简洁版)/: CMakeLists.txt
条形码识别 (简洁版) (复件)/capset/: v4l2uvc.c
条形码识别 (简洁版) (复件)/include/: image_handle.h  myVideoCap.h  v4l2uvc.h
条形码识别 (简洁版) (复件)/src/: CMakeLists.txt  find_and_pick.cpp
条形码识别 (简洁版) (复件)/test/: basler_video_test.cpp  run_test.cpp  video_test.cpp
条形码识别 (简洁版)/include/: find_and_pick.h  my_bar_code.h
条形码识别 (简洁版)/src/: CMakeLists.txt  find_and_pick.cpp  image_handle.cpp  serialapp.cpp
条形码识别 (简洁版)/test/: CMakeLists.txt  basler_video_test.cpp  formal.cpp  run_test.cpp  video_test.cpp
条形码识别/include/: find_and_pick.h  my_bar_code.h
条形码识别/src/: CMakeLists.txt  find_and_pick.cpp  my_bar_code.cpp
条形码识别/test/: CMakeLists.txt  run_test.cpp
步兵调试（CLion）/RM/: CMakeLists.txt  Param.yaml  camera.yml  camera1280X720.yml  camera3.yml  camera4.yml  camera720.yml  formal.cpp  main.cpp
步兵调试（CLion）/RM/ArmorDetect/: Armor.cpp  Armor.h  ArmorDetect.cpp  ArmorDetect.h  Param.cpp  Param.h
步兵调试（CLion）/RM/ArmorDetect (origi)/: Armor.cpp  Armor.h  ArmorDetect.cpp  ArmorDetect.h  CMakeLists.txt  Param.h  Predictor.cpp  serialapp.cpp
步兵调试（CLion）/RM/ArmorDetect11/: ArmorDetect.cpp  Param.cpp  Predictor.h  serialapp.h  serialbase.h
步兵调试（CLion）/RM/FileWrite/: filewrite.cpp
步兵调试（CLion）/RM/calibrateCross/: CMakeLists.txt  calibrateCross.cpp
步兵调试（CLion）/RM/calibration/: calibration.cpp
步兵调试（CLion）/RM/capset/: capset.cpp  myVideoCap.h
步兵调试（CLion）/RM/origi/: camera.yml
步兵调试（CLion）/RM/testSerialSend/: CMakeLists.txt  testSerialSend.cpp
步兵调试（CLion）/RM/步兵辅助瞄准参数/: camera5.yml
祖光杯/include/: find_and_pick.h  my_bar_code.h
祖光杯/src/: find_and_pick.cpp  my_bar_code.cpp  serialapp.cpp
祖光杯/test/: CMakeLists.txt  basler_and_formal.cpp  basler_video_test.cpp  formal.cpp  run_test.cpp
程序测试/src/: c.cpp
项目练习备份/: 最小矩形及发现QRCODE.cpp
